Fixing search icon on mobile

--- a/static/css/style00.css
+++ b/static/css/style00.css
@@ -468,6 +468,14 @@ span {
 	white-space: pre-wrap;
 }
 
+.map_reader {
+    white-space: pre-wrap;
+}
+
+.bold_tagline {
+    line-height: 3;
+}
+
 /*----------------------- showSagas details ------------------------*/
 
 .fullPage-title {
@@ -973,8 +981,8 @@ img {
 		padding: 0 5px;
 		height: 30px;
 	}
-     br  {
-         
+     .bold_tagline {
+            line-height: 2;   
      }
 }
 
@@ -1032,8 +1040,8 @@ img {
 	.iw-bottom-gradient {
 		width: 385px;
 	}
-     br  {
-         
+     .bold_tagline {
+            line-height: 1.5;   
      }
 }
 
@@ -1098,8 +1106,8 @@ img {
 		}
 	}
 
-    br  {
-         
+    .bold_tagline {
+            line-height: 1.3;   
      }
 }
 
